--- a/02-fMRIDA_homework.ipynb
+++ b/02-fMRIDA_homework.ipynb
@@ -14,10 +14,7 @@
    "source": [
     "In this assignment, your task is to complete a few exercises related to data manipulation and plotting in Python.\n",
     "\n",
-    "You can choose to answer in Polish or English (it will not affect your grade).\n",
-    "\n",
-    "\n",
-    "**DEADLINE:** 01-11-2020\n",
+    "You can choose to answer in Polish or English (this will not affect your grade).\n",
     "\n",
     "--------------------\n"
    ]
@@ -64,25 +61,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load libraries\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load the image \n",
     "\n",
     "\n",
+    "# Print shape and type of the image\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create a new variable containing only the first (RED) channel of image (e.g. new_image = image[:,:,0])\n",
     "\n",
     "\n",
-    "# Print shape and type of the image\n",
-    "\n",
-    "\n",
     "# Plot the new image using plt.imshow with changed cmap and colorbar\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save the new image as numpy array (use np.save())\n",
     "\n"
    ]
@@ -105,19 +123,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load libraries\n",
-    "\n",
-    "\n",
-    "# Load MRI image in python (.nii file in \"data\" folder)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load MRI image in python (.nii file in \"data\" folder with \"t1\" in filename)\n",
     "\n",
     "\n",
     "# Print shape and type of the image\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Plot sagittal section of the MRI image presenting the hippocampus\n",
     "\n"
    ]
@@ -126,7 +158,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4*. (optional; for magical points) Use MRI data to create a visualization for a logo of our \"Fundamentals fMRI analysis\" course GitHub page (https://github.com/fMRIAnalysisCourse) and MSTeams logo**."
+    "**4. Load functional MRI (fMRI) image in python and select a one sagittal brain section that nicely presents the hippocampus.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load fMRI image in python (.nii file in \"data\" folder with \"bold\" in filename)\n",
+    "\n",
+    "\n",
+    "# Print shape and type of fMRI image\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert nibabel data structure to numpy array \n",
+    "\n",
+    "\n",
+    "# create two variables (voxel_1, voxel_2) that store BOLD timeseries from two selected voxels. \n",
+    "# Try to select voxels that lie very close to each other in space.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot timeseries from one voxel on one plot\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the relationship between two voxels (use scatterplot). Do you have some observations?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**5*. (optional; for magical points) Use MRI data to create a visualization for a new logo of our \"Fundamentals fMRI analysis\" course GitHub page (https://github.com/fMRIAnalysisCourse)."
    ]
   },
   {
